Setting form.enctype reflected attribute behaves strangely. https://bugs.webkit.org/show_bug.cgi?id=44879

Patch by Vineet Chaudhary <vineet.chaudhary@motorola.com> on 2011-10-21
Reviewed by Darin Adler.

Source/WebCore:

The spec says form.enctype should be application/x-www-form-urlencoded,
So as "text", "plain", "multipart" or "form-data" these are not a valid value so must be ignored.

* loader/FormSubmission.cpp:
(WebCore::FormSubmission::Attributes::parseEncodingType):

LayoutTests:

Leading/trailing white-spaces should not be allowed while specifying attribute value.
Added more test coverage for form.enctype attribute.

* fast/forms/encoding-test.html:
* fast/forms/enctype-attribute-expected.txt:
* fast/forms/enctype-attribute.html: Corrected test case as per new behavior.

Canonical link: https://commits.webkit.org/86851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98172 268f45cc-cd09-0410-ab3c-d52691b4dbfc